      <config db="MsSqlServer2005" csn="MyConnectionStringName"/>
    </activerecord>
  to get default configurations for different DBs (Sql Server, SQLite, Oracle, MySql and others)
- Added defaults for PrimaryKeyType unless specified explicitly:
    guid.comb for guids
    assigned for strings
    native otherwise
- Added basic support for CpBT (see IConversation interface and tests for usage)


- Bugs fixed:
  AR-ISSUE-157
  AR-ISSUE-180
  AR-ISSUE-192
  AR-ISSUE-271
  AR-ISSUE-272
  AR-ISSUE-274
  AR-ISSUE-275
  AR-ISSUE-276
  AR-ISSUE-277
  AR-ISSUE-278

2.0 Beta1
===
- Updated NHibernate to 2.1.0 CR1. Please specify the byte code provider in your config files.
- (AR-ISSUE-258) Added Castle.ActiveRecord.Testing.InMemoryTest base class for in memory SQLite testing.
- (AR-ISSUE-257) Added NHibernate Search integration.
- (AR-ISSUE-256) Integrated ActiveRecordLinq from contrib without changes
- (AR-ISSUE-236) Added schema-action, so that behaviour for create/drop/update schema can be defined per class.

- (AR-ISSUE-254) Added StatelessSessionScope for higher performance. Functionality is restricted, see test cases for
  StatelessSessionScope.

- (AR-ISSUE-253) Added support for lazily loading many-to-one-relations (BelongsTo) via proxies.

- Bugs fixed:
  AR-ISSUE-249
  AR-ISSUE-261
  AR-ISSUE-264
  AR-ISSUE-265
  
2.0 Alpha1
===
- Updated NHibernate to 2.1 Alpha. Please specify the byte code provider in your config files.

- Restored AutoFlush behaviour under NHibernate 2.0.

- Added code that can guess an collection of mapped Enums without specifying the ColumnKey, Element or ElementType.
  Breaking: changed the ElementType from a string to a type.

- Search parent models when trying to infer BelongsTo relationship information.

- Allow CompositeUserType to be applied to fields too.

- Adding support for integrating NH models and AR models.
  Sample of how this can be done can be found here: